browser/scss/feedback/main.scss
#like-feedback {
    font-size: 40px;
}

#confused-feedback {
    font-size: 40px;
}

#code-feedback {
    font-size: 30px;
}

.container {
  width: 100%;
}

.btn-circle.btn-xl {
  width: 70px;
  height: 70px;
  padding: 10px 10px;
  font-size: 24px;
  line-height: 1.33;
  border-radius: 35px;
}

.badge-notify{
   background:red;
   position:relative;
   bottom: 70px;
   right: -25px;
   font-size: 15px;
}

.badge-notify-sm{
   background:red;
   position:relative;
   bottom: 45px;
   right: -20px;
   font-size: 12px;
}

.center {
    justify-content: center;
}

.btn-container {
    display: flex;
    justify-content: center;
}

.btn-xl .tooltiptext {
    visibility: hidden;
    background-color: gray;
    color: #fff;
    text-align: center;
    padding: 2px 6px;
    border-radius: 6px;
    top: 100%;
    left: 50%; 
    margin-left: -100px;
    position: absolute;
    font-size: 15px;
    z-index: 1;
}

.btn-xl:hover .tooltiptext {
    visibility: visible;
}

.btn-circle-sm {
  width: 35px;
  height: 35px;
  text-align: center;
  padding: 2px 0;
  font-size: 20px;
  line-height: 1.65;
  border-radius: 30px;
}

.btn-circle-sm .tooltiptext {
    visibility: hidden;
    background-color: gray;
    color: #fff;
    text-align: center;
    top: 70%;
    left: 50%; 
    margin-left: -100px;
    position: absolute;
    font-size: 15px;
    z-index: 1;
}

.btn-circle-sm:hover .tooltiptext {
    visibility: visible;
}

